@@ -1,5 +1,8 @@
 2011-08-05  Jason Merrill  <jason@redhat.com>
 
+	PR c++/49669
+	* g++.dg/init/array28.C: New.
+
 	PR c++/49988
 	* g++.dg/cpp0x/constexpr-non-const-arg3.C: New.
 
