@@ -1,5 +1,8 @@
 2011-08-05  Jason Merrill  <jason@redhat.com>
 
+	PR c++/49669
+	* init.c (perform_member_init): Handle invalid array initializer.
+
 	PR c++/49988
 	* semantics.c (cxx_eval_array_reference): Handle failure to
 	reduce the array operand to something we can work with.
